--- a/webdC-2.html
+++ b/webdC-2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>웹디자인 기능사 레이아웃 C-2</title>
+  <title>웹디자인 기능사 실기 레이아웃 C-2</title>
   <link rel="stylesheet" href="styleC-2.css">
 </head>
 <body>
@@ -12,20 +12,15 @@
       <h1 class="logo"></h1>
       <nav class="nav"></nav>
     </aside>
-    <!-- //aside -->
-
     <main id="main">
       <article id="slider">
       </article>
-      <!-- //slider -->
 
       <section id="contents">
         <article class="content1"></article>
         <article class="content2"></article>
         <article class="content3"></article>
       </section>
-      <!-- //contents -->
-
       <footer id="footer">
         <div class="footer1"></div>
         <div class="footer2">
@@ -33,11 +28,7 @@
           <div class="footer2-2"></div>
         </div>
       </footer>
-      <!-- //footer -->
-
     </main>
-    <!-- //main -->
   </div>
 </body>
-<!-- //wrap -->
 </html>
