--- a/webdC-2.html
+++ b/webdC-2.html
@@ -12,15 +12,20 @@
       <h1 class="logo"></h1>
       <nav class="nav"></nav>
     </aside>
+    <!-- //aside-->
+
     <main id="main">
       <article id="slider">
       </article>
+      <!-- //article -->
 
       <section id="contents">
         <article class="content1"></article>
         <article class="content2"></article>
         <article class="content3"></article>
       </section>
+      <!-- //section -->
+
       <footer id="footer">
         <div class="footer1"></div>
         <div class="footer2">
@@ -28,7 +33,11 @@
           <div class="footer2-2"></div>
         </div>
       </footer>
+      <<!-- //footer -->
+
     </main>
+    <!-- //main-->
+    
   </div>
 </body>
 </html>
