--- a/webdE-1.html
+++ b/webdE-1.html
@@ -6,6 +6,7 @@
   <title>웹디자인 기능사 레이아웃 E-1 </title>
   <link rel="stylesheet" href="styleE-1.css">
 </head>
+
 <body>
   <div id="wrap">
     <main id="main">
@@ -13,14 +14,23 @@
         <h1 class="logo"></h1>
         <nav class="nav"></nav>
       </header>
+      <!-- //header -->
+
       <section id="contents">
         <article class="banner"></article>
         <article class="notice"></article>
         <article class="gallery"></article>
         <article class="link"></article>
       </section>
-      <article id="slider"></article>
+      <!-- contents -->
+
+      <article id="slider">
+      </article>
+      <!-- //slider  -->
+
     </main>
+    <!-- //main-->
+
     <footer id="footer">
      <div class="footer1"></div>
      <div class="footer2">
@@ -28,6 +38,10 @@
       <div class="footer2-2"></div>
      </div>
     </footer>
+    <!-- //footer -->
+
   </div>
+  <!-- //wrap -->
+
 </body>
 </html>
