--- a/webdE-1.html
+++ b/webdE-1.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>웹디자인 기능사 레이아웃 E-1 </title>
+  <title>웹디자인 기능사 레이아웃 E-1</title>
   <link rel="stylesheet" href="styleE-1.css">
 </head>
-
 <body>
   <div id="wrap">
     <main id="main">
@@ -22,26 +21,22 @@
         <article class="gallery"></article>
         <article class="link"></article>
       </section>
-      <!-- contents -->
+      <!-- //contents -->
 
       <article id="slider">
       </article>
-      <!-- //slider  -->
+      <!-- //slider -->
 
     </main>
-    <!-- //main-->
-
     <footer id="footer">
-     <div class="footer1"></div>
-     <div class="footer2">
-      <div class="footer2-1"></div>
-      <div class="footer2-2"></div>
-     </div>
+      <div class="footer1"></div>
+      <div class="footer2">
+        <div class="footer2-1"></div>
+        <div class="footer2-2"></div>
+      </div>
     </footer>
     <!-- //footer -->
 
   </div>
-  <!-- //wrap -->
-
 </body>
 </html>
