chore : Add hyundai by design

--- a/Canvas.html
+++ b/Canvas.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=, initial-scale=1.0">
-  <title>NoBuling</title>
+  <title>HYUNDAI</title>
   <link rel="stylesheet" href="Canvas.css">
 </head>
 <body>
@@ -11,7 +11,9 @@
     <div id="main">
       <div class="content">
         <div class="header">
-          <h1 class="logo">Logo</h1>
+          <h1 class="logo">
+            <img src="hyundai.jpg" alt="현대 로고">
+          </h1>
           <nav class="nav">
             <ul>
               <li><a href="#">Home</a></li>
@@ -22,16 +24,21 @@
           </nav>
         </div>
         <div class="contbox">
-          <h1>NoBuling</h1>
+          <h1>Architecture Art</h1>
         </div>
         <div class="icon">
-          <p>Next</p>
+          <button>Next</button>
         </div>
       </div>
       <div class="slider">
-        <img src="img.jpeg" alt="건축물 디자인">
+        <div class="slide">
+          <div style="background-color: aquamarine;"><img src="img.jpeg" alt="건축물 디자인"></div>
+          <div style="background-color: antiquewhite;"></div>
+          <div style="background-color: aliceblue;"></div>
+          <div style="background-color: aquamarine;"><img src="img.jpeg" alt="건축물 디자인"></div>
+      </div>
         <div class="img-text" style="color: white;">
-          <p>Aesthetics and harmony of your soul</p>
+          <p>Modern innovative Architectural art</p>
         </div>
       </div>
     </div>
