chore : Add favicon

--- a/Canvas.html
+++ b/Canvas.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=, initial-scale=1.0">
   <title>HYUNDAI</title>
   <link rel="stylesheet" href="Canvas.css">
+  <link rel="icon" href="logo.svg">
 </head>
 <body>
   <div id="wrap">
