perf : Fix function

--- a/skills baseball park.html
+++ b/skills baseball park.html
@@ -2,38 +2,60 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=, initial-scale=1.0">
-  <title>인천지방기능경기대회 준비</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hanwha Eagles</title>
   <link rel="stylesheet" href="skills baseball park.css">
   <link rel="icon" href="hanwha_icon.svg">
 </head>
 <body>
   <div id="wrap">
-    <div class="main">
-      <div class="img">
-        <img src="macwallpapers.jpg" alt="맥북 배경화면">
+    <div class="back">
+      <div class="header" style="color: white;">
+        <h1 class="logo">Skills Baseball Park</h1>
+        <!-- //logo -->
 
-        <div class="header" style="color: white;">
-          <h1 class="logo">Skills Baseball Park</h1>
-          <nav class="nav">
-            <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Bids</a></li>
-              <li><a href="#">Creators</a></li>
-              <li><a href="#">About</a></li>
-            </ul>
-          </nav>
-          <div class="login">
-            <a href="subpage.html">
-              <button type="button" name="login" id="login">Sign in</button>
-            </a>
-          </div>
+        <nav class="nav">
+          <ul>
+            <li><a href="#">Information</a></li>
+            <li><a href="#">Statistics</a></li>
+            <li><a href="#">Reservation</a></li>
+            <li><a href="#">Goods</a></li>
+          </ul>
+        </nav>
+        <!-- //nav -->
+
+        <div class="login">
+          <button type="button" name="Sign in" id="Login">
+            <a href="subpage.html">Sign in</a>
+          </button>
+          <button type="button" name="Sign up" id="Sign up">
+            <a href="subpage.html">Sign up</a>
+          </button>
+        </div>
+        <!-- //login -->
+
+      </div>
+      <!-- //header -->
+
+      <div class="main">
+        <div class="slide">
+          <div><img src="44.jpg" alt="홈구장"></div>
+          <div><img src="44.jpg" alt="홈구장"></div>
+          <div><img src="44.jpg" alt="홈구장"></div>
+          <div><img src="44.jpg" alt="홈구장"></div>
         </div>
       </div>
-      <!-- //img -->
+      <!-- //main -->
+
+      <div class="footer">
+        <div class="footer1"></div>
+        <div class="footer2"></div>
+        <div class="footer3"></div>
+      </div>
+      <!-- //footer -->
 
     </div>
-    <!-- //main -->
+    <!-- //back -->
 
   </div>
   <!-- //wrap -->
