chore : Add images

--- a/skills baseball park.html
+++ b/skills baseball park.html
@@ -40,8 +40,9 @@
       <div class="main">
         <div class="slide">
           <div><img src="44.jpg" alt="홈구장"></div>
-          <div><img src="44.jpg" alt="홈구장"></div>
-          <div><img src="44.jpg" alt="홈구장"></div>
+          <div><img src="16.jpg" alt="선수단"></div>
+          <div><img src="36.jpg" alt="타자"></div>
+          <div><img src="42.jpg" alt="스타디움"></div>
           <div><img src="44.jpg" alt="홈구장"></div>
         </div>
       </div>
