chore : Add text

--- a/skills baseball park.html
+++ b/skills baseball park.html
@@ -39,10 +39,40 @@
 
       <div class="main">
         <div class="slide">
-          <div><img src="44.jpg" alt="홈구장"></div>
-          <div><img src="44.jpg" alt="홈구장"></div>
-          <div><img src="44.jpg" alt="홈구장"></div>
-          <div><img src="44.jpg" alt="홈구장"></div>
+          <div>
+            <img src="44.jpg" alt="홈구장">
+            <div class="txt1">
+              <h1>No limits amazing skills baseball park!</h1>
+              <h2>towards the top</h2>
+            </div>
+          </div>
+
+          <div>
+            <img src="08.jpg" alt="스타디움">
+            <div class="txt2">
+              <h1>스킬스 베이스볼 파크에 오신것을 환영합니다.</h1>
+            </div>
+          </div>
+
+          <div>
+            <img src="36.jpg" alt="타자">
+            <div class="txt3">
+              <h1>New Champion, New Challenge, Skills Baseball Park</h1>
+            </div>
+          </div>
+
+          <div>
+            <img src="42.jpg" alt="스타디움">
+          </div>
+
+          <div>
+            <img src="44.jpg" alt="홈구장">
+            <div class="txt1">
+              <h1>No limits amazing skills baseball park!</h1>
+              <h2>towards the top</h2>
+            </div>
+          </div>
+
         </div>
       </div>
       <!-- //main -->
