chore : Add foottxt

--- a/skills baseball park.html
+++ b/skills baseball park.html
@@ -63,6 +63,10 @@
 
           <div>
             <img src="42.jpg" alt="스타디움">
+            <div class="txt4">
+              <h1>스킬스베이스볼 파크를 응원해주시는 모든 분께 감사드립니다.</h1>
+              <h3>-by staff-</h3>
+            </div>
           </div>
 
           <div>
@@ -77,10 +81,23 @@
       </div>
       <!-- //main -->
 
+      <div class="contents"></div>
+
       <div class="footer">
-        <div class="footer1"></div>
-        <div class="footer2"></div>
-        <div class="footer3"></div>
+        <div class="copyright">
+          <p>
+            Call: 142-3677<br>
+            Email: help@skillsbaseballpark.com<br>
+            Address: (12345) 서울특별서 중구 중북로 71<br>
+            <br><br>
+            Copyrightⓒ Skills baseball park. All rights reserved.
+          </p>
+        </div>
+        <div class="footcontainer">
+          <div class="footbox">
+            <h1>Skills Baseball Park</h1>
+          </div>
+        </div>
       </div>
       <!-- //footer -->
 
