--- a/skills baseball park.html
+++ b/skills baseball park.html
@@ -39,7 +39,6 @@
 
       <div class="main">
         <div class="slide">
-<<<<<<< HEAD
           <div>
             <img src="44.jpg" alt="홈구장">
             <div class="txt1">
@@ -64,6 +63,10 @@
 
           <div>
             <img src="42.jpg" alt="스타디움">
+            <div class="txt4">
+              <h1>스킬스베이스볼 파크를 응원해주시는 모든 분께 감사드립니다.</h1>
+              <h3>-by staff-</h3>
+            </div>
           </div>
 
           <div>
@@ -74,21 +77,25 @@
             </div>
           </div>
 
-=======
-          <div><img src="44.jpg" alt="홈구장"></div>
-          <div><img src="16.jpg" alt="선수단"></div>
-          <div><img src="36.jpg" alt="타자"></div>
-          <div><img src="42.jpg" alt="스타디움"></div>
-          <div><img src="44.jpg" alt="홈구장"></div>
->>>>>>> 7a4f0d79e81cd5c07e95818eb9dfece3306b3423
         </div>
       </div>
       <!-- //main -->
 
-      <div class="footer">
-        <div class="footer1"></div>
-        <div class="footer2"></div>
-        <div class="footer3"></div>
+      <div class="contents"></div>
+
+      <div class="footer" style="color: #d3d3d3;">
+        <div class="copyright">
+          <p>Call: 142-3677</p>
+          <p>Email: help@skillsbaseballpark.com</p>
+          <p>Address: (12345) 서울특별서 중구 중북로 71</p>
+          <p>Copyrightⓒ Skills baseball park. All rights reserved.</p>
+          
+        </div>
+        <div class="footcontainer">
+          <div class="footbox">
+            <h1>Skills Baseball Park</h1>
+          </div>
+        </div>
       </div>
       <!-- //footer -->
 
