--- a/info.html
+++ b/info.html
@@ -11,12 +11,23 @@
     <div class="main">
       <div class="cont">
         <div class="cont1">
-          <div><img src="07.jpg" alt="그라운드"></div>
+          <div>
+            <img src="07.jpg" alt="그라운드">
+          </div>
         </div>
         <div class="cont2" style="color: white;">
           <strong>야구를 사랑하며 즐기는 생활체육인들이 모이는 곳<br>
             다양한 즐거움과 감동을 선사하는 곳</strong>
           <h4>Skills baseball park는 시민들의 복리증진을 위하여 설치되었으며, 시민들의 건강 및 복지향상과 시민들에게 편리한 시설물 이용을 위한 야구장입니다.</h4>
+          <div class="btn">
+            <button type="button" name="info" id="information">
+              <a href="subpage.html">
+                <span>
+                  더 알아보기
+                </span>
+              </a>
+            </button>
+          </div>
         </div>
       </div>
       <!-- //cont -->
