--- a/skills baseball park.html
+++ b/skills baseball park.html
@@ -81,7 +81,20 @@
       </div>
       <!-- //main -->
 
-      <div class="contents"></div>
+      <div class="contents">
+        <div class="cont">
+          <div class="cont1">
+            <div>
+              <img src="07.jpg" alt="그라운드">
+            </div>
+          </div>
+          <div class="cont2" style="color: white;">
+            <strong>야구를 사랑하며 즐기는 생활체육인들이 모이는 곳<br>
+              다양한 즐거움과 감동을 선사하는 곳</strong>
+            <h4>Skills baseball park는 시민들의 복리증진을 위하여 설치되었으며, 시민들의 건강 및 복지향상과 시민들에게 편리한 시설물 이용을 위한 야구장입니다.</h4>
+          </div>
+        </div>
+      </div>
 
       <div class="footer" style="color: #d3d3d3;">
         <div class="copyright">
@@ -89,8 +102,8 @@
           <p>Email: help@skillsbaseballpark.com</p>
           <p>Address: (12345) 서울특별서 중구 중북로 71</p>
           <p>Copyrightⓒ Skills baseball park. All rights reserved.</p>
-          
         </div>
+
         <div class="footcontainer">
           <div class="footbox">
             <h1>Skills Baseball Park</h1>
