chore : Add img and design

--- a/Skills baseball park/skills baseball park test.html
+++ b/Skills baseball park/skills baseball park test.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hanwha Eagles</title>
-  <link rel="stylesheet" href="skills baseball park.css">
+  <link rel="stylesheet" href="skills baseball park test.css">
   <link rel="icon" href="hanwha_icon.svg">
 </head>
 <body>
