--- a/Skills baseball park/webdesign.html
+++ b/Skills baseball park/webdesign.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>디자인 중간 점검</title>
+    <title>Skills Baseball Park</title>
     <link rel="stylesheet" href="webdesign.css">
-    <link rel="icon" href="hanwha_icon.svg">
 </head>
 <body>
     <div class="back">
         <div class="main">
-            <div class="header" style="color: white;">
+            <div class="header">
                 <h1 class="logo">
                     Skills Baseball Park
                 </h1>
@@ -30,6 +29,85 @@
                 </div>
             </div>
             <!-- //header -->
+
+            <div class="info">
+                <div class="slide">
+                    <div>
+                        <img src="25.jpg" alt="홈구장">
+                        <div class="tt1">
+                            <h1>No limits amazing skills baseball park!</h1>
+                            <h4>towards the top of the world</h4>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="37.jpg" alt="발판">
+                        <div class="tt2">
+                            <h1>Welcome</h1> 
+                            <h4>스킬스 베이스볼 파크에 오신것을 환영합니다.</h4>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="51.jpg" alt="타자">
+                        <div class="tt3">
+                            <h2>New Champion,<br>
+                                New Challenge,<br>
+                                Skills Baseball Park</h2>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="16.jpg" alt="스타디움">
+                        <div class="tt4">
+                            <h1>Thank you</h1>
+                            <h4>스킬스베이스볼 파크를 응원해주시는 모든 분께 감사드립니다.</h4>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="25.jpg" alt="홈구장">
+                        <div class="tt1">
+                            <h1>No limits amazing skills baseball park!</h1>
+                            <h4>towards the top of the world</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- //info -->
+
+            <div class="content">
+                <div class="cont">
+                    <div class="cont1">
+                        <div>
+                            <img src="09.jpg" alt="야구공">
+                        </div>
+                    </div>
+                    <div class="cont2">
+                        <strong>야구를 사랑하며 즐기는 생활체육인들이 모이는 곳<br>
+                                다양한 즐거움과 감동을 선사하는 곳</strong>
+                        <h5>
+                            Skills baseball park는 시민들의 복리증진을 위하여 설치되었으며, 시민들의 건강 및 복지향상과 시민들에게 편리한 시설물 이용을 위한 야구장입니다.
+                        </h5>
+                    </div>
+                </div>
+            </div>
+
+            <footer class="footer">
+                <div class="footb">
+                    <h1>Skills Baseball Park</h1>
+
+                    <div class="pinfo">
+                        <p>Call : 142-3677</p>
+                        <p>Email : help@skillsbaseballpark.com</p>
+                    </div>
+
+                    <div class="pinfo2">
+                        <span>Address: (12345) 서울특별서 중구 중북로 71</span>
+                    </div>
+
+                    <div class="copy">
+                        <b>Copyrightⓒ Skills baseball park. All rights reserved.</b>
+                    </div>
+                </div>
+            </footer>
+            <!-- //footer -->
 
         </div>
         <!-- //main -->
