chore : Add calendar

--- a/Skills baseball park/webdesign.html
+++ b/Skills baseball park/webdesign.html
@@ -34,60 +34,218 @@
                 <div class="slide">
                     <div>
                         <img src="25.jpg" alt="홈구장">
+
                         <div class="tt1">
                             <h1>No limits amazing skills baseball park!</h1>
                             <h4>towards the top of the world</h4>
                         </div>
                     </div>
+
                     <div>
                         <img src="37.jpg" alt="발판">
+
                         <div class="tt2">
                             <h1>Welcome</h1> 
                             <h4>스킬스 베이스볼 파크에 오신것을 환영합니다.</h4>
                         </div>
                     </div>
+
                     <div>
                         <img src="51.jpg" alt="타자">
+
                         <div class="tt3">
                             <h2>New Champion,<br>
                                 New Challenge,<br>
                                 Skills Baseball Park</h2>
                         </div>
                     </div>
+
                     <div>
                         <img src="16.jpg" alt="스타디움">
+
                         <div class="tt4">
                             <h1>Thank you</h1>
                             <h4>스킬스베이스볼 파크를 응원해주시는 모든 분께 감사드립니다.</h4>
                         </div>
                     </div>
+
                     <div>
                         <img src="25.jpg" alt="홈구장">
+
                         <div class="tt1">
                             <h1>No limits amazing skills baseball park!</h1>
                             <h4>towards the top of the world</h4>
                         </div>
                     </div>
+
                 </div>
+                <!-- //slide -->
+
             </div>
             <!-- //info -->
 
             <div class="content">
                 <div class="cont">
+
                     <div class="cont1">
                         <div>
-                            <img src="09.jpg" alt="야구공">
+                            <img src="38.jpg" alt="구장전망">
                         </div>
                     </div>
+                    <!-- //cont1 -->
+
                     <div class="cont2">
-                        <strong>야구를 사랑하며 즐기는 생활체육인들이 모이는 곳<br>
-                                다양한 즐거움과 감동을 선사하는 곳</strong>
-                        <h5>
+                        <strong>
+                            야구를 사랑하며 즐기는 생활체육인들이 모이는 곳<br>
+                            다양한 즐거움과 감동을 선사하는 곳
+                        </strong>
+
+                        <h4>
                             Skills baseball park는 시민들의 복리증진을 위하여 설치되었으며, 시민들의 건강 및 복지향상과 시민들에게 편리한 시설물 이용을 위한 야구장입니다.
-                        </h5>
+                        </h4>
+
+                        <div class="btn">
+                            <button type="button" name="info" id="information">
+                                <a href="#">
+                                    더 알아보기
+                                </a>
+                            </button>
+                        </div>
+
                     </div>
+                    <!-- //cont2 -->
+
                 </div>
+                <!-- //cont -->
+
             </div>
+            <!-- //content -->
+
+            <div class="calendar">
+                <div class="daily">
+                    <h1>
+                        2024년 4월
+                    </h1>
+                    
+                    <div class="gamst">
+                        <div class="gsl">
+                            <div>
+                                <p>4/4 <strong>Team WEB</strong> 5 : 4 <strong>Team Design</strong></p>
+                            </div>
+                            <div>
+                                <p>4/4 <strong>Team WEB</strong> 5 : 4 <strong>Team Design</strong></p>
+                            </div>
+                            <div>
+                                <p>4/4 <strong>Team WEB</strong> 5 : 4 <strong>Team Design</strong></p>
+                            </div>
+                            <div>
+                                <p>4/4 <strong>Team WEB</strong> 5 : 4 <strong>Team Design</strong></p>
+                            </div>
+                        </div>
+                        <!-- //gsl -->
+
+                    </div>
+                    <!-- //gamst -->
+
+                </div>
+                <!-- //daily -->
+
+                <div class="cale">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>일</th>
+                                <th>월</th>
+                                <th>화</th>
+                                <th>수</th>
+                                <th>목</th>
+                                <th>금</th>
+                                <th>토</th>
+                            </tr>
+                        </thead>
+                        <!-- //thead -->
+
+                        <tbody>
+                            <tr>
+                                <td></td>
+                                <td>1</td>
+                                <td>2</td>
+                                <td>3</td>
+                                <td>4</td>
+                                <td>5</td>
+                                <td>6</td>
+                            </tr>
+                            <tr>
+                                <td>7</td>
+                                <td>8</td>
+                                <td>9</td>
+                                <td>10</td>
+                                <td>11</td>
+                                <td>12</td>
+                                <td>13</td>
+                            </tr>
+                            <tr>
+                                <td>14</td>
+                                <td>15</td>
+                                <td>16</td>
+                                <td>17</td>
+                                <td>18</td>
+                                <td>19</td>
+                                <td>
+                                    <div class="mbt">
+                                        <label for="modal" class="button">
+                                            20
+                                        </label>
+                                    </div>
+                                    <!-- //mbt -->
+
+                                    <input type="checkbox" id="modal" class="hidden">
+                                    <div class="molab">
+                                        <div class="mob">
+                                            <label for="modal" class="closer">
+                                                닫기
+                                            </label>
+
+                                            <div class="mmt">
+                                                <h3>아직 게임이 없습니다.</h3>
+                                            </div>
+                                        </div>
+                                        <!-- //mob -->
+
+                                    </div>
+                                    <!-- //molab -->
+
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>21</td>
+                                <td>22</td>
+                                <td>23</td>
+                                <td>24</td>
+                                <td>25</td>
+                                <td>26</td>
+                                <td>27</td>
+                            </tr>
+                            <tr>
+                                <td>28</td>
+                                <td>29</td>
+                                <td>30</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                        </tbody>
+                        <!-- //tbody -->
+
+                    </table>
+                    <!-- //table -->
+
+                </div>
+                <!-- //cale -->
+
+            </div>
+            <!-- //calendar -->
 
             <footer class="footer">
                 <div class="footb">
@@ -105,7 +263,10 @@
                     <div class="copy">
                         <b>Copyrightⓒ Skills baseball park. All rights reserved.</b>
                     </div>
+
                 </div>
+                <!-- //footb -->
+
             </footer>
             <!-- //footer -->
 
