chore : Split div select

--- a/Ranking/rk.html
+++ b/Ranking/rk.html
@@ -38,25 +38,40 @@
                 <input type="checkbox" id="night" class="hidden">
                 <div class="select1">
 
-                    <label for="pitch" class="sbn">투수</label>
-                    <label for="hitter" class="sbn">타자</label>
+                    <div class="select1-1">
+                        <label for="pitch" class="sbn">투수</label>
+                    </div>
+
+                    <div class="select1-2">
+                        <label for="hitter" class="sbn">타자</label>
+                    </div>
 
                 </div>
 
                 <input type="checkbox" id="week" class="hidden">
                 <div class="select2">
 
-                    <label for="pitch2" class="sbn">투수</label>
-                    <label for="hitter2" class="sbn">타자</label>
+                    <div class="select2-1">
+                        <label for="pitch2" class="sbn">투수</label>
+                    </div>
+
+                    <div class="select2-2">
+                        <label for="hitter2" class="sbn">타자</label>
+                    </div>
 
                 </div>
 
                 <input type="checkbox" id="dawn" class="hidden">
                 <div class="select3">
-                    
-                    <label for="pitch3" class="sbn">투수</label>
-                    <label for="hitter3" class="sbn">타자</label>
 
+                    <div class="select3-1">
+                        <label for="pitch3" class="sbn">투수</label>
+                    </div>
+
+                    <div class="select3-2">
+                        <label for="hitter3" class="sbn">타자</label>
+                        
+                    </div>
                 </div>
 
             </div>
