--- a/Gallery/imgslide.html
+++ b/Gallery/imgslide.html
@@ -114,7 +114,7 @@
 
         /* 하단 레이블 */
 
-        #imgslider .imgslider_labels {position:absolute; bottom:20px;left:50%; transform:translate(-50%, 0);}
+        /* #imgslider .imgslider_labels {position:absolute; bottom:20px;left:50%; transform:translate(-50%, 0);}
 
         .imgslider_labels label {float:left; margin:0 5px 0 0; width:20px; height:20px; border:2px solid #f00; border-radius:50%; cursor:pointer;}
 
@@ -126,7 +126,7 @@
 
         #input_slidebtn3:checked~.imgslider_labels label:nth-child(3) {background-color:#f00;}
 
-        #input_slidebtn4:checked~.imgslider_labels label:nth-child(4) {background-color:#f00;}
+        #input_slidebtn4:checked~.imgslider_labels label:nth-child(4) {background-color:#f00;} */
 
     
 
@@ -198,7 +198,7 @@
 
         </div>
 
-        <div class="imgslider_labels clearfloat">
+        <!-- <div class="imgslider_labels clearfloat">
 
             <label for="input_slidebtn1"></label>
 
@@ -208,7 +208,7 @@
 
             <label for="input_slidebtn4"></label>
 
-        </div>
+        </div> -->
 
     </div>
 
