chore : Add imgslide

--- a/Skills baseball park/final summary.html
+++ b/Skills baseball park/final summary.html
@@ -33,6 +33,60 @@
 
             </div>
 
+            <div class="imgslide">
+                
+                <div class="slide">
+                    <div>
+                        <img src="25.jpg" alt="">
+
+                        <div class="t1">
+                            <h1>No limits amazing skills baseball park!</h1>
+                            <h4>towards the top of the world</h4>
+                        </div>
+                    </div>
+
+                    <div>
+                        <img src="37.jpg" alt="">
+
+                        <div class="t2">
+                            <h1>Welcome</h1>
+                            <h4>스킬스 베이스볼 파크에 오신것을 환영합니다.</h4>
+                        </div>
+                    </div>
+
+                    <div>
+                        <img src="51.jpg" alt="">
+
+                        <div class="t3">
+                            <h2>
+                                New Champion<br>
+                                New Challenge<br>
+                                Skills Baseball Park
+                            </h2>
+                        </div>
+                    </div>
+
+                    <div>
+                        <img src="16.jpg" alt="">
+
+                        <div class="t4">
+                            <h1>Thank you</h1>
+                            <h4>스킬스베이스볼 파크를 응원해주시는 모든 분께 감사드립니다.</h4>
+                        </div>
+                    </div>
+
+                    <div>
+                        <img src="25.jpg" alt="">
+
+                        <div class="t1">
+                            <h1>No limits amazing skills baseball park!</h1>
+                            <h4>towards the top of the world</h4>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
         </div>
 
     </div>
