chore : Add calendar

--- a/Skills baseball park/final summary.html
+++ b/Skills baseball park/final summary.html
@@ -118,6 +118,32 @@
 
             </div>
 
+            <div class="calendar">
+                <div class="daily">
+                    <div class="year">
+                        <h1>
+                            2024년 4월 1일
+                        </h1>
+                    </div>
+                    <div class="status">
+                        <div class="sld">
+                            <div>
+                                <b>4/1 <strong>Team WEB</strong> 5 : 4 <strong>Team Design</strong></b>
+                            </div>
+                            <div>
+                                <b>4/1 <strong>Team WEB</strong> 5 : 4 <strong>Team Design</strong></b>
+                            </div>
+                            <div>
+                                <b>4/1 <strong>Team WEB</strong> 5 : 4 <strong>Team Design</strong></b>
+                            </div>
+                            <div>
+                                <b>4/1 <strong>Team WEB</strong> 5 : 4 <strong>Team Design</strong></b>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
     </div>
