docs: Duplication file delete

--- a/Canvas/Canvas.html
+++ b/Canvas/Canvas.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=, initial-scale=1.0">
   <title>HYUNDAI</title>
   <link rel="stylesheet" href="Canvas.css">
-  <link rel="icon" href="logo.svg">
+  <link rel="icon" href="images/logo.svg">
 </head>
 <body>
   <div id="wrap">
@@ -13,7 +13,7 @@
       <div class="content">
         <div class="header">
           <h1 class="logo">
-            <img src="hyundai.jpg" alt="현대 로고">
+            <img src="images/hyundai.jpg" alt="현대 로고">
           </h1>
           <nav class="nav">
             <ul>
@@ -33,10 +33,10 @@
       </div>
       <div class="slider">
         <div class="slide">
-          <div style="background-color: aquamarine;"><img src="img.jpeg" alt="건축물 디자인"></div>
+          <div style="background-color: aquamarine;"><img src="images/img.jpeg" alt="건축물 디자인"></div>
           <div style="background-color: antiquewhite;"></div>
           <div style="background-color: aliceblue;"></div>
-          <div style="background-color: aquamarine;"><img src="img.jpeg" alt="건축물 디자인"></div>
+          <div style="background-color: aquamarine;"><img src="images/img.jpeg" alt="건축물 디자인"></div>
       </div>
         <div class="img-text" style="color: white;">
           <p>Modern innovative Architectural art</p>
