--- a/MacWallpapers/MacWallpapers.html
+++ b/MacWallpapers/MacWallpapers.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mac Wallpapers</title>
   <link rel="stylesheet" href="MacWallpapers.css">
-  <link rel="icon" href="apple_logo_icon.png">
+  <link rel="icon" href="images/apple_logo_icon.png">
 </head>
 <body>
   <div id="wrap">
     <div id="main">
       <div class="img">
-        <img src="macwallpapers.jpg" alt="맥북 배경화면">
+        <img src="images/macwallpapers.jpg" alt="맥북 배경화면">
 
         <div class="header">
           <h1 class="logo" style="color: white;">Mac</h1>
@@ -55,10 +55,10 @@
           <!-- //contbox -->
           <div class="slbox">
             <div class="slide">
-              <div><img src="MacBook Pro.jpg" alt="맥북 프로"></div>
+              <div><img src="images/MacBook Pro.jpg" alt="맥북 프로"></div>
               <div style="background-color: aqua;"></div>
               <div style="background-color: aliceblue;"></div>
-              <div><img src="MacBook Pro.jpg" alt="맥북 프로"></div>
+              <div><img src="images/MacBook Pro.jpg" alt="맥북 프로"></div>
             </div>
           </div>
         </div>
